fixed some alignment issues for firefox

--- a/css/countdown.css
+++ b/css/countdown.css
@@ -68,18 +68,21 @@ span.turn{
 #buttons input {
   position: relative;
   text-align: center;
-  width: 10%;
+  width: 15%;
   font-size: 18px;
   margin-top: 15px;
   margin-bottom: 15px;
-  left: 290px;
+  margin-left: 5px;
+  margin-right:5px;
+  left: 213px;
 }
 
 #sliders input{
   position: relative;
   text-align: center;
+  width: 10%;
   margin-top: 15px;
   margin-bottom: 15px;
-  margin-right: 75px;
-  left: 40px
+  margin-right: 112px;
+  left: 50px
 }
